<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <EditText
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Identifiant"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/labelMdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mdp" />

            <EditText
                android:id="@+id/txtMdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/mdp"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/cmdLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connexion" />

            <TextView
                android:id="@+id/lblErreur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>